--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,16 @@
     background-color: rgba(60, 60, 60, 0.6);
     color: white;
 }
+
+body::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+body::-webkit-scrollbar-thumb {
+    background-color: #64748b; 
+    border-radius: 6px; 
+  }
+  
+body::-webkit-scrollbar-track {
+    background: transparent; 
+  }
