--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .active {
-  background-color: rgba(60, 60, 60, 0.6);
+  background-color: rgba(87, 87, 87, 0.4);
   color: white;
 }
 
@@ -18,4 +18,21 @@ body::-webkit-scrollbar-thumb {
 
 body::-webkit-scrollbar-track {
   background: transparent;
+}
+
+.circle {
+  box-shadow: 0px 0px 1px 1px #ec02021a;
+}
+
+.pulse {
+  animation: pulse-animation 2s infinite;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.4);
+  }
+  100% {
+    box-shadow: 0 0 0 15px rgba(201, 201, 201, 0);
+  }
 }
